--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
                 class="absolute -bottom-0 -z-10 left-1/2 -translate-x-1/2 md:scale-130"
               >
                 <svg
-                  width="500"
-                  height="500"
+                  width="400"
+                  height="400"
                   viewBox="0 0 200 200"
                   xmlns="http://www.w3.org/2000/svg"
                 >
                   <path
                     fill="#007ebb"
                     d="M47.2,-13.5C57,14.7,57.7,47.6,40.5,61.5C23.3,75.3,-11.9,70.1,-36.9,51.7C-61.9,33.4,-76.6,1.9,-68.7,-23.7C-60.9,-49.3,-30.4,-68.9,-5.9,-67C18.7,-65.1,37.5,-41.7,47.2,-13.5Z"
-                    transform="translate(100 100)"
+                    transform="translate(100 100) scale(1.1)"
                   />
                 </svg>
               </span>
