--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </p>
 
             <a
-              href="https://wa.link/ftdifa"
+              href="https://wa.link/rtiucn"
               class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
               >Hubungi saya</a
             >
